--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>DCK Technologies | Empowering Digital Solutions</title>
@@ -32,8 +33,43 @@
       margin-top: 2rem;
     }
   </style>
+  <script src="js/script.js"></script>
 </head>
 <body>
+  <nav>
+  <h1>DCK Technologies</h1>
+  <button id="darkModeToggle" class="btn mt-2">Toggle Dark Mode</button>
+</nav>
+
+<!-- Services Section -->
+<section class="fade-in">
+  <h2 class="text-2xl font-bold mb-4">Our Services</h2>
+  <p>We offer Web Development, RPA Automation, DevOps Support & more.</p>
+</section>
+
+<!-- Portfolio Section -->
+<section class="fade-in">
+  <h2 class="text-2xl font-bold mb-4">Portfolio</h2>
+  <p>Check out our recent work and case studies.</p>
+</section>
+
+<!-- Contact Section -->
+<section class="fade-in">
+  <h2 class="text-2xl font-bold mb-4">Contact Us</h2>
+  <p>Email: <a href="mailto:chetankumar.dasari@gmail.com" class="text-blue-600 underline">chetankumar.dasari@gmail.com</a></p>
+  <p>Phone: <a href="tel:+918019741546" class="text-blue-600 underline">+91 80197 41546</a></p>
+</section>
+
+
+<section class="fade-in">
+  <h2 class="text-2xl font-bold mb-4">Welcome to DCK Technologies</h2>
+</section>
+
+
+  <section>
+  <h2 class="text-2xl font-bold mb-4">Get Started</h2>
+  <button id="alertButton" class="btn">Click Me</button>
+</section>
   <header>
     <h1>DCK Technologies</h1>
     <p>Empowering Businesses with Smart Digital Solutions</p>
@@ -61,8 +97,24 @@
     <p><a href="https://www.linkedin.com/in/chetan-kumar-dasari-36aa6a141/" target="_blank">LinkedIn Profile</a></p>
   </section>
 
+  <!-- Contact Section with Form -->
+<section class="fade-in">
+  <h2 class="text-2xl font-bold mb-4">Contact Us</h2>
+  <form action="https://formsubmit.co/chetankumar.dasari@gmail.com" method="POST" class="space-y-4 max-w-md mx-auto">
+    <input type="hidden" name="_captcha" value="false">
+<input type="hidden" name="_next" value="https://dcktechnologies.xyz/thanks.html">
+
+    <input type="text" name="name" placeholder="Your Name" required class="w-full p-2 border rounded">
+    <input type="email" name="email" placeholder="Your Email" required class="w-full p-2 border rounded">
+    <textarea name="message" placeholder="Your Message" required class="w-full p-2 border rounded"></textarea>
+    <button type="submit" class="btn w-full">Send Message</button>
+  </form>
+</section>
+
+
   <footer>
     <p>© 2025 DCK Technologies. All rights reserved.</p>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 </html>
