--- a/index.html
+++ b/index.html
@@ -1,120 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>DCK Technologies | Empowering Digital Solutions</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: #f9f9f9;
-      color: #333;
-    }
-    header {
-      background-color: #0b3d91;
-      color: white;
-      padding: 1.5rem;
-      text-align: center;
-    }
-    section {
-      padding: 2rem;
-      max-width: 1000px;
-      margin: auto;
-    }
-    h1, h2 {
-      color: #0b3d91;
-    }
-    footer {
-      background: #eee;
-      text-align: center;
-      padding: 1rem;
-      margin-top: 2rem;
-    }
-  </style>
-  <script src="js/script.js"></script>
+  <link rel="stylesheet" href="css/style.css">
+  <script defer src="js/script.js"></script>
 </head>
 <body>
-  <nav>
-  <h1>DCK Technologies</h1>
-  <button id="darkModeToggle" class="btn mt-2">Toggle Dark Mode</button>
-</nav>
-
-<!-- Services Section -->
-<section class="fade-in">
-  <h2 class="text-2xl font-bold mb-4">Our Services</h2>
-  <p>We offer Web Development, RPA Automation, DevOps Support & more.</p>
-</section>
-
-<!-- Portfolio Section -->
-<section class="fade-in">
-  <h2 class="text-2xl font-bold mb-4">Portfolio</h2>
-  <p>Check out our recent work and case studies.</p>
-</section>
-
-<!-- Contact Section -->
-<section class="fade-in">
-  <h2 class="text-2xl font-bold mb-4">Contact Us</h2>
-  <p>Email: <a href="mailto:chetankumar.dasari@gmail.com" class="text-blue-600 underline">chetankumar.dasari@gmail.com</a></p>
-  <p>Phone: <a href="tel:+918019741546" class="text-blue-600 underline">+91 80197 41546</a></p>
-</section>
-
-
-<section class="fade-in">
-  <h2 class="text-2xl font-bold mb-4">Welcome to DCK Technologies</h2>
-</section>
-
-
-  <section>
-  <h2 class="text-2xl font-bold mb-4">Get Started</h2>
-  <button id="alertButton" class="btn">Click Me</button>
-</section>
   <header>
     <h1>DCK Technologies</h1>
     <p>Empowering Businesses with Smart Digital Solutions</p>
+    <button id="darkModeToggle">🌙 Toggle Dark Mode</button>
   </header>
 
-  <section>
-    <h2>About Us</h2>
-    <p>DCK Technologies is a freelance tech brand led by Dasari Chetan Kumar, offering solutions in RPA (UiPath), WordPress Development, DevOps, and Cybersecurity.</p>
-  </section>
-
-  <section>
-    <h2>Services</h2>
+  <nav>
     <ul>
-      <li>✅ UiPath RPA Automation</li>
-      <li>✅ WordPress Websites & SEO</li>
-      <li>✅ DevOps Setup & CI/CD Pipelines</li>
-      <li>✅ Cybersecurity Audits</li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#portfolio">Portfolio</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
-  </section>
+  </nav>
 
-  <section>
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:chetankumar.dasari@gmail.com">chetankumar.dasari@gmail.com</a></p>
-    <p>Phone: +91 8019741546</p>
-    <p><a href="https://www.linkedin.com/in/chetan-kumar-dasari-36aa6a141/" target="_blank">LinkedIn Profile</a></p>
-  </section>
+  <main>
+    <section id="about" class="fade-in">
+      <h2>About Us</h2>
+      <p>DCK Technologies is a freelance tech brand led by Dasari Chetan Kumar, offering solutions in RPA (UiPath), WordPress Development, DevOps, and Cybersecurity.</p>
+    </section>
 
-  <!-- Contact Section with Form -->
-<section class="fade-in">
-  <h2 class="text-2xl font-bold mb-4">Contact Us</h2>
-  <form action="https://formsubmit.co/chetankumar.dasari@gmail.com" method="POST" class="space-y-4 max-w-md mx-auto">
-    <input type="hidden" name="_captcha" value="false">
-<input type="hidden" name="_next" value="https://dcktechnologies.xyz/thanks.html">
+    <section id="services" class="fade-in">
+      <h2>Our Services</h2>
+      <ul>
+        <li>✅ UiPath RPA Automation</li>
+        <li>✅ WordPress Websites & SEO</li>
+        <li>✅ DevOps Setup & CI/CD Pipelines</li>
+        <li>✅ Cybersecurity Audits</li>
+      </ul>
+    </section>
 
-    <input type="text" name="name" placeholder="Your Name" required class="w-full p-2 border rounded">
-    <input type="email" name="email" placeholder="Your Email" required class="w-full p-2 border rounded">
-    <textarea name="message" placeholder="Your Message" required class="w-full p-2 border rounded"></textarea>
-    <button type="submit" class="btn w-full">Send Message</button>
-  </form>
-</section>
+    <section id="portfolio" class="fade-in">
+      <h2>Portfolio</h2>
+      <p>Check out our recent work and case studies.</p>
+    </section>
 
+    <section class="fade-in">
+      <h2>Get Started</h2>
+      <button id="alertButton">Click Me</button>
+    </section>
+
+    <section id="contact" class="fade-in">
+      <h2>Contact Us</h2>
+      <p>Email: <a href="mailto:chetankumar.dasari@gmail.com">chetankumar.dasari@gmail.com</a></p>
+      <p>Phone: <a href="tel:+918019741546">+91 80197 41546</a></p>
+      <p><a href="https://www.linkedin.com/in/chetan-kumar-dasari-36aa6a141/" target="_blank" rel="noopener noreferrer">LinkedIn Profile</a>
+</p>
+
+      <form action="https://formsubmit.co/chetankumar.dasari@gmail.com" method="POST">
+        <input type="hidden" name="_captcha" value="false">
+        <input type="hidden" name="_next" value="https://dcktechnologies.xyz/thanks.html">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="email" placeholder="Your Email" required>
+        <textarea name="message" placeholder="Your Message" required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
+    </section>
+  </main>
 
   <footer>
     <p>© 2025 DCK Technologies. All rights reserved.</p>
   </footer>
-  <script src="js/script.js"></script>
 </body>
 </html>
