anchor tab error resolved in main branch

--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
     <h2>Contact</h2>
     <p>Email: <a href="mailto:chetankumar.dasari@gmail.com">chetankumar.dasari@gmail.com</a></p>
     <p>Phone: +91 8019741546</p>
-    <p><a href="https://www.linkedin.com/in/chetan-kumar-dasari-36aa6a141/" target="_blank">LinkedIn Profile</a></p>
+    <p><a href="https://www.linkedin.com/in/chetan-kumar-dasari-36aa6a141/" target="_blank" rel="noopener noreferrer">Connect</a>
+</p>
   </section>
 
   <!-- Contact Section with Form -->
