updated mail and number

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
     <section id="contact" class="fade-in">
       <h2>Contact Us</h2>
-      <p>Email: <a href="mailto:chetankumar.dasari@gmail.com">chetankumar.dasari@gmail.com</a></p>
-      <p>Phone: <a href="tel:+918019741546">+91 80197 41546</a></p>
+      <p>Email: <a href="mailto:chetankumar.dasari@gmail.com">dck@gmail.com</a></p>
+      <p>Phone: <a href="tel:+919848576217">+91 98485 76217</a></p>
       <p><a href="https://www.linkedin.com/in/chetan-kumar-dasari-36aa6a141/" target="_blank" rel="noopener noreferrer">LinkedIn Profile</a>
 </p>
 
